# kra-etims-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dry_run.py  init_device.py  pyproject.toml  run_e2e_test.py  test_connection.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/: 00.html  000.html  0000.html  001.html  891.html  892.html  893.html  894.html  895.html  896.html  899.html  900.html  901.html  902.html  903.html  905.html  910.html  911.html  912.html  921.html  922.html  990.html  991.html  992.html  993.html  994.html  995.html  999.html  CHANGELOG.md  CONTRIBUTING.md  E04.html  E11.html  errors.js  errors.json  faq.html  index.html  llms.txt  robots.txt  sitemap.xml
examples/: basic_invoice.py
scripts/: generate-pages.js
src/kra_etims/: __init__.py  _base_client.py  _telemetry.py  async_client.py  client.py  exceptions.py  gateway.py  gavaconnect.py  middleware.py  models.py  qr.py  reports.py  tax.py
src/kra_etims/cli/: __init__.py  _client.py  config.py  main.py  output.py  queue.py
src/kra_etims_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_key_auth.py  test_async.py  test_cli_auth.py  test_cli_device_invoice.py  test_cli_integration.py  test_cli_pin_validate.py  test_cli_queue.py  test_cli_reports.py  test_cli_tax.py  test_cli_tcc.py  test_cli_validate_pin.py  test_concurrency.py  test_decorators.py  test_e2e.py  test_environment.py  test_gavaconnect.py  test_idempotency.py  test_math_precision.py  test_packaging.py  test_payload_integrity.py  test_performance.py  test_phase2.py  test_resilience.py  test_schema.py  test_schrodinger.py  test_vscu_resilience.py
