[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kra-etims-sdk"
version = "0.1.0"
description = "Senior-level Python SDK for KRA eTIMS via TIaaS Middleware"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kra_etims*"]
