[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxid-etims"
version = "0.3.0"
description = "Enterprise Python SDK for KRA eTIMS via TIaaS Middleware — idempotency engine with offline resilience"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "TaxID Engineering", email = "support@taxid.co.ke"},
]
keywords = ["kra", "etims", "kenya", "tax", "invoicing", "vscu", "tiims"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    # httpx serves both transports: httpx.Client (sync, thread-safe) and
    # httpx.AsyncClient (async). requests is no longer a dependency.
    "httpx>=0.25.0",
]

[project.scripts]
etims = "kra_etims.cli.main:main"

[project.optional-dependencies]
cli = [
    "typer>=0.25.0",
    "rich>=15.0",
    "platformdirs>=4.9.6",
    "keyring>=25.0",
    # tomli-w: correct TOML writer (atomic writes, full spec compliance).
    # tomllib (stdlib) reads but cannot write; hand-rolling TOML is fragile.
    "tomli-w>=1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    # pytest-httpx covers both httpx.Client and httpx.AsyncClient via httpx_mock fixture.
    # responses was a requests-specific mock library and is no longer needed.
    "pytest-httpx>=0.30.0",
    # build + setuptools/wheel: used by test_packaging.py --no-isolation wheel builds.
    "build>=1.0",
    "setuptools>=61.0",
    "wheel",
]
qr = [
    "qrcode[pil]>=7.4.2",
]
otel = [
    "opentelemetry-api>=1.20.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kra_etims*"]

[tool.setuptools.package-data]
kra_etims = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that build/install packages (deselect with -m 'not slow')",
    "integration: marks CLI+HTTP integration tests (always run in CI)",
]
